wip: add search get endpoint
